--- a/StyleSheet.css
+++ b/StyleSheet.css
@@ -1,1 +1,18 @@
+html{background-color:orange;
+    background-image: linear-gradient(to bottom,white,darkorange);}
+    body{border:1px solid black;
+        border-radius:30px;
+        box-shadow: 2px 2px 10px black;
+        margin:20px; padding:20px;
+        background-color: white;
+        }
+    main{
+        margin:20px; padding:20px;
+        width:75%;min-width:300px;max-width:600px;}
+    h1, p {border:1px solid green;}
+    h1{margin:0; padding:15px;}
+    p{margin:0px; margin-bottom:5px;}
+    *{margin:0px; padding:0px;}
 
+    ul{margin:0 0 1.5em 2em;}
+    li{font-size:85%; padding-left:5px; padding-bottom:5px;}
