--- a/StyleSheet.css
+++ b/StyleSheet.css
@@ -1,32 +1,36 @@
-/* Style the buttons that are used to open the tab content */
-.tab button {
-  background-color: inherit;
+/* Add a black background color to the top navigation */
+.topnav {
+  background-color: #333;
+  overflow: hidden;
+}
+
+/* Style the links inside the navigation bar */
+.topnav a {
   float: left;
-  border: none;
-  outline: none;
-  cursor: pointer;
+  display: block;
+  color: #f2f2f2;
+  text-align: center;
   padding: 14px 16px;
-  transition: 0.3s;
+  text-decoration: none;
+  font-size: 17px;
 }
 
-/* Change background color of buttons on hover */
-.tab button:hover {
+/* Change the color of links on hover */
+.topnav a:hover {
   background-color: #ddd;
+  color: black;
 }
 
-/* Create an active/current tablink class */
-.tab button.active {
-  background-color: #ccc;
+/* Add an active class to highlight the current page */
+.topnav a.active {
+  background-color: #04AA6D;
+  color: white;
 }
 
-/* Style the tab content */
-.tabcontent {
+/* Hide the link that should open and close the topnav on small screens */
+.topnav .icon {
   display: none;
-  padding: 6px 12px;
-  border: 1px solid #ccc;
-  border-top: none;
 }
-
 
 h1{
     color: Blue;
